--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-kafka:
-  brokers: localhost:59092
-
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/outbox_poc
@@ -10,6 +7,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: 'true'
+    show-sql: 'false'
     hibernate:
       ddl-auto: update
+
+kafka:
+  brokers: localhost:59092
